--- a/index.html
+++ b/index.html
@@ -2,32 +2,31 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>⚠️ MODI BIRTHDAY CHAOS ⚠️</title>
+<title>🚨 OFFICIAL MODI BIRTHDAY INVESTIGATION 🚨</title>
 
 <style>
   body {
     margin:0;
     font-family: Impact, Arial Black, Arial, sans-serif;
-    background: black;
-    color: white;
+    background:black;
+    color:white;
     text-align:center;
     overflow-x:hidden;
   }
 
-  /* Animated rainbow background */
   body::before {
     content:"";
     position:fixed;
     top:0; left:0;
     width:100%; height:100%;
-    background: linear-gradient(45deg, red, orange, yellow, green, cyan, blue, purple);
-    background-size: 400% 400%;
-    animation: rainbowMove 8s infinite linear;
-    z-index:-1;
+    background: linear-gradient(90deg, red, orange, yellow, green, cyan, blue, purple);
+    background-size:400% 400%;
+    animation: rave 6s infinite linear;
     opacity:0.25;
+    z-index:-1;
   }
 
-  @keyframes rainbowMove {
+  @keyframes rave {
     0% { background-position:0% 50%; }
     100% { background-position:100% 50%; }
   }
@@ -36,67 +35,51 @@
     font-size:4em;
     margin-top:40px;
     color:#00ffff;
-    text-shadow: 4px 4px 10px hotpink;
-    animation: shake 0.5s infinite alternate;
+    text-shadow: 4px 4px 12px hotpink;
+    animation: wobble 0.6s infinite alternate;
   }
 
-  @keyframes shake {
+  @keyframes wobble {
     from { transform: rotate(-1deg); }
     to { transform: rotate(1deg); }
   }
 
   h2 {
     font-size:2em;
-    margin-bottom:15px;
-    color: #ffcc00;
+    color:#ffd700;
   }
 
   .section {
-    max-width:800px;
-    margin:40px auto;
-    padding:30px;
-    border:5px solid white;
-    border-radius:20px;
-    background: rgba(0,0,0,0.7);
-    box-shadow: 0 0 25px hotpink;
+    max-width:850px;
+    margin:50px auto;
+    padding:35px;
+    border:6px solid white;
+    border-radius:25px;
+    background:rgba(0,0,0,0.75);
+    box-shadow:0 0 30px hotpink;
   }
 
-  .claim {
-    font-size:1.3em;
+  .big {
+    font-size:1.4em;
     line-height:1.8em;
   }
 
-  .wild {
+  .insane {
+    font-size:1.6em;
     color:#ff4d4d;
-    font-size:1.5em;
     animation: pulse 1s infinite;
   }
 
   @keyframes pulse {
     0% { transform: scale(1); }
-    50% { transform: scale(1.05); }
+    50% { transform: scale(1.07); }
     100% { transform: scale(1); }
   }
 
-  button {
-    font-size:1.5em;
-    padding:15px 30px;
-    background:#00ffcc;
-    border:none;
-    border-radius:12px;
-    cursor:pointer;
-    margin-top:20px;
-  }
-
-  button:hover {
-    background:hotpink;
-    color:white;
-  }
-
   footer {
-    margin:60px 0;
-    font-size:1em;
-    opacity:0.8;
+    margin:70px 0;
+    font-size:1.1em;
+    opacity:0.85;
   }
 </style>
 </head>
@@ -104,96 +87,111 @@
 <body>
 
 <h1>🎂 HAPPY BIRTHDAY MODI 🎂</h1>
-<h2>Mohamed Ibrahim — The Legend. The Myth. The Late Arrival.</h2>
-
-<button onclick="startMusic()">▶️ INITIATE BIRTHDAY CINEMATIC ◀️</button>
+<h2>Mohamed Ibrahim — The Raptor Operator</h2>
 
 <div class="section">
-  <h2>🎯 VALORANT PROPHECY</h2>
-  <div class="claim">
-    Crosshair Placement: Decorative<br>
-    Spray Pattern: Emotional Expression<br>
-    Flash Avoidance: Optional<br><br>
-    <span class="wild">
-      CLAIM: Modi once got 3 kills and hasn't stopped talking about it since.
-    </span>
+  <h2>🎯 VALORANT PERFORMANCE REVIEW</h2>
+  <div class="big">
+    Crosshair Placement: Philosophical<br>
+    Spray Control: Experimental Art<br>
+    Flash Awareness: Optional<br><br>
+
+    CLAIM: Modi once got 3 kills in a round<br>
+    and has been referencing it for 14 months straight.
   </div>
 </div>
 
 <div class="section">
-  <h2>🍗 LALALAND FRIED CHICKEN DEVOTION</h2>
-  <div class="claim">
-    The employees greet him by name.<br>
-    His blood type is now Mild + Garlic Sauce.<br><br>
-    CLAIM: If Lalaland ever closes, he will enter his villain arc.
-  </div>
-</div>
+  <h2>⏰ WHY IS HE LATE?</h2>
+  <div class="big">
+    Event Time: 7:00pm<br>
+    Group Chat at 7:04pm: “5 mins away bro”<br>
+    Reality: <br><br>
 
-<div class="section">
-  <h2>⏰ THE PUNCTUALITY SAGA</h2>
-  <div class="claim">
-    Event: 7:00pm<br>
-    Modi Text at 7:01pm: "Parking now"<br>
-    Actual Location: Still in the shower<br><br>
-    But he's trying. Character growth is canon.
-  </div>
-</div>
-
-<div class="section">
-  <h2>🚗 FORD RAPTOR ENERGY</h2>
-  <div class="claim">
-    Horsepower: Illegal<br>
-    Volume Level: MAXIMUM<br>
-    Speed Limit Awareness: Theoretical<br><br>
-    CLAIM: He has said “it handles different bro” at least 47 times.
-  </div>
-</div>
-
-<div class="section">
-  <h2>🌈 CONFIDENCE STATEMENT</h2>
-  <div class="claim">
-    Straight? Yes.<br>
-    Secure? Extremely.<br><br>
-    Famous Quote:<br>
-    <span class="wild">
-      "It ain’t gay to kiss the boys on the lips."
+    <span class="insane">
+      He is on the toilet.<br>
+      Phone in one hand.<br>
+      TikTok open.<br>
+      Fighting for his life.
     </span><br><br>
-    Brotherhood Level: Legendary.
+
+    Arrival ETA increases with each scroll.
   </div>
 </div>
 
 <div class="section">
-  <h2>🎁 BIRTHDAY BUFF ACTIVATED</h2>
-  <div class="claim">
-    +15 Aim (Pending Verification)<br>
-    +10 Punctuality (Work in Progress)<br>
-    +25 Horsepower Confidence<br><br>
-    Modi, you are loud.<br>
-    You are improving.<br>
-    You are chaotic.<br>
+  <h2>🍗 LALALAND FRIED CHICKEN LORE</h2>
+  <div class="big">
+    Favourite Flavours: All of them.<br>
+    Garlic? Yes.<br>
+    Spicy? Yes.<br>
+    BBQ? Yes.<br>
+    Mystery Sauce? Absolutely.<br><br>
+
+    <span class="insane">
+      Snow Cheese? Never.  
+      That is where he draws the line.
+    </span><br><br>
+
+    Scientists confirm 18% of his body mass is now crispy coating.
+  </div>
+</div>
+
+<div class="section">
+  <h2>🚗 FORD RAPTOR PROPAGANDA</h2>
+  <div class="big">
+    Horsepower: Excessive<br>
+    Acceleration: Aggressive<br>
+    Volume: Weaponized<br><br>
+
+    CLAIM: He has said “it handles different bro”  
+    after doing absolutely nothing different.
+  </div>
+</div>
+
+<div class="section">
+  <h2>🌈 BROTHERHOOD STATEMENT</h2>
+  <div class="big">
+    Straight? Yes.<br>
+    Secure? Extremely.<br>
+    Comfortable? Dangerously.<br><br>
+
+    Famous Line Heard in Public:<br><br>
+
+    <span class="insane">
+      “It ain’t gay to kiss the boys on the lips.”
+    </span><br><br>
+
+    Brotherhood Level: MAXIMUM.
+  </div>
+</div>
+
+<div class="section">
+  <h2>📊 FINAL STAT SHEET</h2>
+  <div class="big">
+    Aim: Developing<br>
+    Punctuality: Situational<br>
+    Confidence: Overclocked<br>
+    Raptor Enthusiasm: Unregulated<br>
+    Chicken Loyalty: Fanatical<br><br>
+
+    Modi, you are chaotic.<br>
+    You are loud.<br>
+    You are occasionally still in the bathroom.<br><br>
+
     And we wouldn’t change a thing.
   </div>
-
-  <button onclick="alert('🎉 HAPPY BIRTHDAY MODI 🎉\\n\\nMay your shots land and your ETA be honest.')">
-    CLAIM STAT BOOST
-  </button>
 </div>
 
 <footer>
-  This website was forged in neon chaos and mild disrespect.<br>
+  This website was created with aggressive friendship energy.<br>
   HAPPY BIRTHDAY KING 👑
 </footer>
 
 <script>
-let started = false;
-
-function startMusic() {
-  if (started) return;
-  started = true;
-
+  // Automatic chaotic beep intro
   const ctx = new (window.AudioContext || window.webkitAudioContext)();
-  ctx.resume();
-  let t = ctx.currentTime;
+  let t = ctx.currentTime + 0.5;
 
   const notes = [440, 494, 523, 659, 784, 659, 523, 494, 440];
 
@@ -204,18 +202,17 @@ function startMusic() {
     osc.type = "sawtooth";
     osc.frequency.value = freq;
 
-    gain.gain.setValueAtTime(0.25, t);
-    gain.gain.exponentialRampToValueAtTime(0.001, t + 0.35);
+    gain.gain.setValueAtTime(0.2, t);
+    gain.gain.exponentialRampToValueAtTime(0.001, t + 0.3);
 
     osc.connect(gain);
     gain.connect(ctx.destination);
 
     osc.start(t);
-    osc.stop(t + 0.35);
+    osc.stop(t + 0.3);
 
-    t += 0.35;
+    t += 0.3;
   });
-}
 </script>
 
 </body>
