Update index.html with new sections and edits
Removed and modified sections for clarity and added new content about Modi and gym commentary.

--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@ footer{margin:60px 0;opacity:.7;}
 <div class="section">
 <h2>🎮 Blue Prince Streaming Energy</h2>
 <div class="big">
-You playing Blue Prince:<br>
-Modi in the background: <strong>"Stream. STREAM. Bro why are you not streaming this. This is content. STREAM."</strong><br><br>
+POV: You are active on discord<br>
+Modi: <strong>"stream"</strong><br><br>
 Also him during cutscene where two characters kiss:<br>
-<strong>"That could be us. I mean— not like that. But like— you know. Cinematically."</strong>
+<strong>"That could be us. *makes kiss noise*."</strong>
 </div>
 </div>
 
@@ -141,7 +141,21 @@ Also him during cutscene where two characters kiss:<br>
 <div class="big">
 Sriracha Mayo • Wasabi Mayo • Honey Soy • Sweet Chilli • Volcano Chilli • Original<br><br>
 Snow Cheese: publicly denounced.<br>
-BBQ & Garlic: never existed. Mandela effect.
+</div>
+</div>
+
+<div class="section">
+<h2>🍗 Lalaland Sauce Matrix</h2>
+<div class="big">
+Sriracha Mayo • Wasabi Mayo • Honey Soy • Sweet Chilli • Volcano Chilli • Original<br><br>
+Snow Cheese: publicly denounced.<br>
+</div>
+</div>
+
+<div class="section">
+<h2> Reason Modi does not climb</h2>
+<div class="big">
+  <img src="https://gifdb.com/images/high/falling-gibby-gibson-icarly-qohtdfnyc7yc4vgd.webp" />
 </div>
 </div>
 
@@ -151,9 +165,7 @@ BBQ & Garlic: never existed. Mandela effect.
 Gym bro walks past:<br>
 <strong>"Bro's actually built. Respectfully. Respectfully."</strong><br><br>
 Watching romance scene:<br>
-<strong>"That could be us. If we were like… in a movie. For tax purposes."</strong><br><br>
-Hugs you slightly too long:<br>
-<strong>"It's just brotherhood."</strong>
+<strong>*Looks a little too long at you and winks*</strong><br>
 </div>
 </div>
 
@@ -171,22 +183,12 @@ Bathroom Status: <span id="bathroom">Checking...</span>
 <h2>🚆 Corporate Rail Overlord</h2>
 <div class="big">
 By day: sourcing precision train components.<br>
-By night: sourcing precision sauce ratios.<br><br>
+By night: running trains on me<br><br>
 Expected Meeting Quote:<br>
 <strong>"Yeah procurement just needs to align with rail compliance deliverables— synergy— circle back."</strong>
 </div>
 <button onclick="openExcel()">Open Excel Sheet</button>
 </div>
-
-<div class="section">
-<h2>💪 Gym Edit Mode</h2>
-<div class="big">
-Activate dramatic Instagram Reels lighting.
-</div>
-<button onclick="toggleGym()">Toggle Gym Edit</button>
-<button onclick="startBeat()">Start Trap Beat</button>
-</div>
-
 <footer>
 Instagram Reels Energy. Rail Logistics Dominance. Bathroom Delays Active.<br>
 HAPPY BIRTHDAY KING 👑
