--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ Snow Cheese: publicly denounced.<br>
 </div>
 
 <div class="section">
-<h2> Reason Modi does not climb</h2>
+<h2>🧗 Reason Modi does not climb</h2>
 <div class="big">
   <img src="https://gifdb.com/images/high/falling-gibby-gibson-icarly-qohtdfnyc7yc4vgd.webp" />
 </div>
